# Note-Pytest

./: .dev.env  .test.env  README.md  main.py  pyproject.toml
src/: examples.py  main.py  settings.py
src/candies/: __init__.py  repository.py  schemas.py  service.py
src/db/: __init__.py  base.py  candies_model.py
tests/: conftest.py
tests/unit_tests/: conftest.py  test_candies_service.py  test_examples.py
